force-app/main/default/objects/Contact/fields/Developers_Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Developers_Contract_Term__c</fullName>
    <label>Developers Contract Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unlimited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>