force-app/main/default/objects/Contact/fields/Disqualified_Stage_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Stage_Time_Stamp__c</fullName>
    <description>As soon as the contact enters the Disqualified stage, a time stamp is set by a workflow</description>
    <label>Disqualified Stage Time Stamp</label>
    <type>DateTime</type>
</CustomField>