force-app/main/default/objects/Contact/fields/Do_Not_Run_Automation__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Run_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Run Automation</label>
    <type>Checkbox</type>
</CustomField>