force-app/main/default/objects/Contact/fields/Doesnt_want_to_provide_Email__c.field-meta.xml
<CustomField>
    <fullName>Doesnt_want_to_provide_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Doesn&apos;t want to provide Email</description>
    <label>Doesn&apos;t want to provide Email</label>
    <type>Checkbox</type>
</CustomField>