force-app/main/default/objects/Contact/fields/Dump_Data__c.field-meta.xml
<CustomField>
    <fullName>Dump_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dump Data</label>
    <type>Checkbox</type>
</CustomField>