force-app/main/default/objects/Contact/fields/Eden_House_Canal_Brokerage_Registration__c.field-meta.xml
<CustomField>
    <fullName>Eden_House_Canal_Brokerage_Registration__c</fullName>
    <label>Eden House Canal Brokerage Registration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Draft Brokerage Agreement sent to Agency</fullName>
            </value>
            <value>
                <fullName>On hold Missing Documents</fullName>
            </value>
            <value>
                <fullName>Pending with LSIR for Signatures</fullName>
            </value>
            <value>
                <fullName>Document not given by Agency</fullName>
            </value>
            <value>
                <fullName>Registration in Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>