force-app/main/default/objects/Contact/fields/Employer_UK__c.field-meta.xml
<CustomField>
    <fullName>Employer_UK__c</fullName>
    <label>Employer (UK)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>