force-app/main/default/objects/Contact/fields/External_closing_ID__c.field-meta.xml
<CustomField>
    <fullName>External_closing_ID__c</fullName>
    <label>External closing ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>