force-app/main/default/objects/Contact/fields/Facebook_Link__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Link__c</fullName>
    <label>Facebook Link</label>
    <type>Url</type>
</CustomField>