force-app/main/default/objects/Contact/fields/Form_Region_Contact__c.field-meta.xml
<CustomField>
    <fullName>Form_Region_Contact__c</fullName>
    <label>Form Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>