force-app/main/default/objects/Contact/fields/Formatted_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Mobile__c</fullName>
    <formula>IF(MobilePhone != NULL ,
IF (
BEGINS(MobilePhone  , &apos;&apos;),
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE( MobilePhone  , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;),&quot;+&quot;, &quot;&quot;),
IF (
BEGINS(MobilePhone  , &apos;+&apos;),
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE( MobilePhone  , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;),&quot;+&quot;, &quot;&quot;),
Null
)),Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formatted Mobile</label>
    <type>Text</type>
</CustomField>