force-app/main/default/objects/Contact/fields/FS_Abu_Dhabi_Brokersage_Registration__c.field-meta.xml
<CustomField>
    <fullName>FS_Abu_Dhabi_Brokersage_Registration__c</fullName>
    <description>Four Seasons Abu Dhabi Brokerage Registration</description>
    <label>FS Abu Dhabi Brokerage Registration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Draft Brokerage Agreement Sent to Agency</fullName>
            </value>
            <value>
                <fullName>On hold Missing Documents</fullName>
            </value>
            <value>
                <fullName>Pending for Signatures</fullName>
            </value>
            <value>
                <fullName>Document not given by the Agency</fullName>
            </value>
            <value>
                <fullName>Registration in Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>