force-app/main/default/objects/Contact/fields/gclid__c.field-meta.xml
<CustomField>
    <fullName>gclid__c</fullName>
    <label>gclid</label>
    <length>80</length>
    <type>Text</type>
</CustomField>