force-app/main/default/objects/Contact/fields/gsir_contact_external_id__c.field-meta.xml
<CustomField>
    <fullName>gsir_contact_external_id__c</fullName>
    <label>Contact External ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>