force-app/main/default/objects/Contact/fields/gsir_date_of_birth__c.field-meta.xml
<CustomField>
    <fullName>gsir_date_of_birth__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>