force-app/main/default/objects/Contact/fields/gsir_date_of_expiry__c.field-meta.xml
<CustomField>
    <fullName>gsir_date_of_expiry__c</fullName>
    <label>Date of Expiry</label>
    <type>Date</type>
</CustomField>