force-app/main/default/objects/Contact/fields/gsir_date_of_issuance__c.field-meta.xml
<CustomField>
    <fullName>gsir_date_of_issuance__c</fullName>
    <label>Date of Issuance</label>
    <type>Date</type>
</CustomField>