force-app/main/default/objects/Contact/fields/gsir_DepartmentBucket__c.field-meta.xml
<CustomField>
    <fullName>gsir_DepartmentBucket__c</fullName>
    <description>05.04.19/US</description>
    <label>Department (Bucket)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>gsir_DepartmentBucket</valueSetName>
    </valueSet>
</CustomField>