force-app/main/default/objects/Contact/fields/gsir_employer__c.field-meta.xml
<CustomField>
    <fullName>gsir_employer__c</fullName>
    <description>Company Name</description>
    <label>Employer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>