force-app/main/default/objects/Contact/fields/gsir_id_expiry_date__c.field-meta.xml
<CustomField>
    <fullName>gsir_id_expiry_date__c</fullName>
    <label>ID Expiry Date</label>
    <type>Date</type>
</CustomField>