force-app/main/default/objects/Contact/fields/gsir_id_number__c.field-meta.xml
<CustomField>
    <fullName>gsir_id_number__c</fullName>
    <label>ID Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>