force-app/main/default/objects/Contact/fields/gsir_id_type__c.field-meta.xml
<CustomField>
    <fullName>gsir_id_type__c</fullName>
    <label>ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Permanent Residence</fullName>
            </value>
            <value>
                <fullName>Employment Visa</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>National ID</fullName>
            </value>
            <value>
                <fullName>Driver License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>