force-app/main/default/objects/Contact/fields/gsir_job_title__c.field-meta.xml
<CustomField>
    <fullName>gsir_job_title__c</fullName>
    <description>Designation</description>
    <label>Job Title</label>
    <length>35</length>
    <type>Text</type>
</CustomField>