force-app/main/default/objects/Contact/fields/GSIR_LISTING_REF__c.field-meta.xml
<CustomField>
    <fullName>GSIR_LISTING_REF__c</fullName>
    <label>Listing Ref</label>
    <length>20</length>
    <type>Text</type>
</CustomField>