force-app/main/default/objects/Contact/fields/gsir_passport_number__c.field-meta.xml
<CustomField>
    <fullName>gsir_passport_number__c</fullName>
    <label>Passport Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>