force-app/main/default/objects/Contact/fields/gsir_preferred_contact_method__c.field-meta.xml
<CustomField>
    <fullName>gsir_preferred_contact_method__c</fullName>
    <label>Preferred Contact method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>