force-app/main/default/objects/Contact/fields/gsir_sender_recipient__c.field-meta.xml
<CustomField>
    <fullName>gsir_sender_recipient__c</fullName>
    <label>Sender Recipient</label>
    <type>TextArea</type>
</CustomField>