force-app/main/default/objects/Contact/fields/gsir_share_editing_premission__c.field-meta.xml
<CustomField>
    <fullName>gsir_share_editing_premission__c</fullName>
    <label>Share editing permission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>