force-app/main/default/objects/Contact/fields/gsir_state__c.field-meta.xml
<CustomField>
    <fullName>gsir_state__c</fullName>
    <label>State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>