force-app/main/default/objects/Contact/fields/gsir_transferred_date__c.field-meta.xml
<CustomField>
    <fullName>gsir_transferred_date__c</fullName>
    <label>Transferred Date</label>
    <type>Date</type>
</CustomField>