force-app/main/default/objects/Contact/fields/gsir_user_full_name__c.field-meta.xml
<CustomField>
    <fullName>gsir_user_full_name__c</fullName>
    <formula>Owner.FirstName &amp; &quot; &quot; &amp;  Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Agent</label>
    <type>Text</type>
</CustomField>