force-app/main/default/objects/Contact/fields/gsir_whatsap_web_link__c.field-meta.xml
<CustomField>
    <fullName>gsir_whatsap_web_link__c</fullName>
    <formula>SUBSTITUTE(
    &quot;https://wa.me/&quot; &amp;
    IF(
        NOT(ISBLANK(TEXT(MobileCountry__c))),
        MID(
            TEXT(MobileCountry__c),
            FIND(&quot;+&quot;, TEXT(MobileCountry__c)) + 1,
            FIND(&quot; &quot;, TEXT(MobileCountry__c), FIND(&quot;+&quot;, TEXT(MobileCountry__c))) - FIND(&quot;+&quot;, TEXT(MobileCountry__c))
        ),
        &quot;&quot;
    ) &amp;
    IF(
        CONTAINS(MobilePhone , &quot; &quot;),
        SUBSTITUTE(MobilePhone , &quot; &quot;, &quot;&quot;),
        IF(
            CONTAINS(MobilePhone , &quot;+&quot;),
            SUBSTITUTE(MobilePhone , &quot;+&quot;, &quot;&quot;),
            IF(
                CONTAINS(MobilePhone , &quot;-&quot;),
                SUBSTITUTE(MobilePhone , &quot;-&quot;, &quot;&quot;),
                IF(
                    CONTAINS(MobilePhone , &quot;(&quot;),
                    SUBSTITUTE(MobilePhone , &quot;(&quot;, &quot;&quot;),
                    IF(
                        CONTAINS(MobilePhone , &quot;)&quot;),
                        SUBSTITUTE(MobilePhone , &quot;)&quot;, &quot;&quot;),
                        MobilePhone
                    )
                )
            )
        )
    ),
    &quot; &quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Whatsap Web Link</label>
    <type>Text</type>
</CustomField>