force-app/main/default/objects/Contact/fields/gsir_work_phone__c.field-meta.xml
<CustomField>
    <fullName>gsir_work_phone__c</fullName>
    <description>Work Phone</description>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>