force-app/main/default/objects/Contact/fields/Gunther__c.field-meta.xml
<CustomField>
    <fullName>Gunther__c</fullName>
    <label>GUNTHER IMPORT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gunther</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>