force-app/main/default/objects/Contact/fields/Hide__c.field-meta.xml
<CustomField>
    <fullName>Hide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide</label>
    <type>Checkbox</type>
</CustomField>