force-app/main/default/objects/Contact/fields/HideContactSharing__c.field-meta.xml
<CustomField>
    <fullName>HideContactSharing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HideContactSharing</label>
    <type>Checkbox</type>
</CustomField>