force-app/main/default/objects/Contact/fields/House_Name_UK__c.field-meta.xml
<CustomField>
    <fullName>House_Name_UK__c</fullName>
    <label>House Name (UK)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>