force-app/main/default/objects/Contact/fields/Hubspot_External_Id_Contact__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_External_Id_Contact__c</fullName>
    <label>Hubspot External Id Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>