force-app/main/default/objects/Contact/fields/HubSpot_Latest_Source__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Latest_Source__c</fullName>
    <label>HubSpot Latest Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>