force-app/main/default/objects/Contact/fields/HubSpot_Source_Drill_Down_1__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Source_Drill_Down_1__c</fullName>
    <label>HubSpot Source Drill Down 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>