force-app/main/default/objects/Contact/fields/ID_Checked__c.field-meta.xml
<CustomField>
    <fullName>ID_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ID Checked (UK)</label>
    <type>Checkbox</type>
</CustomField>