force-app/main/default/objects/Contact/fields/Inquiry_Exclusive_Count__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Exclusive_Count__c</fullName>
    <label>Inquiry Exclusive Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>