force-app/main/default/objects/Contact/fields/Is_Email_Parsing__c.field-meta.xml
<CustomField>
    <fullName>Is_Email_Parsing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Email Parsing?</label>
    <type>Checkbox</type>
</CustomField>