force-app/main/default/objects/Contact/fields/Is_Mobile_Whatsapp_Number__c.field-meta.xml
<CustomField>
    <fullName>Is_Mobile_Whatsapp_Number__c</fullName>
    <label>Is Mobile Whatsapp Number?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>