force-app/main/default/objects/Contact/fields/Is_The_Email_Valid__c.field-meta.xml
<CustomField>
    <fullName>Is_The_Email_Valid__c</fullName>
    <label>Is The Email Valid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>