force-app/main/default/objects/Contact/fields/Keyper_Property_Management__c.field-meta.xml
<CustomField>
    <fullName>Keyper_Property_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Keyper Property Management</label>
    <type>Checkbox</type>
</CustomField>