force-app/main/default/objects/Contact/fields/Last_Activity_Date_time__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date_time__c</fullName>
    <formula>LastActivityLoggedOn__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Activity Formula Date/time</label>
    <type>DateTime</type>
</CustomField>