force-app/main/default/objects/Contact/fields/LastActivityLoggedOn__c.field-meta.xml
<CustomField>
    <fullName>LastActivityLoggedOn__c</fullName>
    <label>LastActivityLoggedOn</label>
    <type>DateTime</type>
</CustomField>