force-app/main/default/objects/Contact/fields/Latest_UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Latest_UTM_Campaign__c</fullName>
    <label>Latest UTM Campaign</label>
    <length>80</length>
    <type>Text</type>
</CustomField>