force-app/main/default/objects/Contact/fields/Latest_UTM_Content__c.field-meta.xml
<CustomField>
    <fullName>Latest_UTM_Content__c</fullName>
    <label>Latest UTM Content</label>
    <length>80</length>
    <type>Text</type>
</CustomField>