force-app/main/default/objects/Contact/fields/Latest_UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>Latest_UTM_Source__c</fullName>
    <label>Latest UTM Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>