force-app/main/default/objects/Contact/fields/Latest_UTM_Term__c.field-meta.xml
<CustomField>
    <fullName>Latest_UTM_Term__c</fullName>
    <label>Latest UTM Term</label>
    <length>80</length>
    <type>Text</type>
</CustomField>