force-app/main/default/objects/Contact/fields/Lead_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Lead_Ranking__c</fullName>
    <label>Lead Ranking</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>